# sdk-py

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/agents/: sdk-py-codi.agent.md  sdk-py-looper.agent.md
.github/workflows/: check-build.yml  release.yml
stackure/: __init__.py  client.py  errors.py  middleware.py  types.py  validation.py
