[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stackure"
version = "1.0.0"
description = "Official Stackure authentication SDK for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Stackure", email = "support@stackure.com" }]
keywords = ["stackure", "authentication", "auth", "sso", "magic-link", "passwordless", "verify", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = ["httpx"]

[project.urls]
Homepage = "https://stackure.com"
Repository = "https://github.com/syi-stackure/sdk-py"
Documentation = "https://docs.stackure.com"
"Bug Tracker" = "https://github.com/syi-stackure/sdk-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["stackure"]

[tool.hatch.build.targets.wheel.force-include]
"stackure/py.typed" = "stackure/py.typed"
